fixed spacing between sku and title. Now if there are multiple skus there is not an issue

--- a/src/containers/Pages/ProductDetail/ProductContent/ProductContent.scss
+++ b/src/containers/Pages/ProductDetail/ProductContent/ProductContent.scss
@@ -15,7 +15,7 @@
   font-size: 12px;
   font-weight: bold;
   letter-spacing: 0.5px;
-  line-height: 3;
+  line-height: 1;
   text-align: left;
 }
 
@@ -32,7 +32,7 @@
 
 .title {
   @extend %h1-mobile;
-  margin-top: 0;
+  margin-top: 17px;
   margin-bottom: 17px;
   width: 100%;
   height: auto;
@@ -125,7 +125,7 @@ $productDetailBtnTabletGap: 16px;
 .titleDesktop {
   @extend %h1-desktop;
   position: relative;
-  margin-top: 0;
+  margin-top: 17px;
   margin-bottom: 40px;
   color: $navy;
 
